[package]
name = "ssa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arraystring = "0.3.0"
serde = { version = "1.0", features = ["derive"]}
strum = { version = "0.25.0", features = ["derive", "phf"] }